manifests/cilium/policies/cilium-health-traffic.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: health-check-policy
  namespace: kube-system

  annotations:
    version: "20241111.01"
    last-updated: "2024-11-11T18:50:36-05:00"

  #labels:
  #  "io.cilium.policy.audit-mode": "enabled"
spec:
  description: "Allow Cilium health check traffic to health endpoints"

  endpointSelector:
    matchExpressions:
      - { key: reserved:health, operator: Exists }

  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
          - port: "4240"
            protocol: TCP

    # Health checking and metric collection of the DNS system
    #- toEntities:
    #    - kube-dns
    #  toPorts:
    #    - ports:
    #      - port: "8080"
    #        protocol: TCP
    #      - port: "8181"
    #        protocol: TCP

  ingress:
    # Allow node to check on Cilium's backbone health directly
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
          - port: "4240"
            protocol: TCP

    # Allow the hubble-relay service to reach out and collect information
    - fromEndpoints:
      - matchLabels:
          k8s:io.kubernetes.pod.namespace: kube-system
          k8s:app: hubble-relay
      toPorts:
        - ports:
          - port: "4244"
            protocol: TCP

    # The API server also makes use of ICMP to monitor node health
    - fromEntities:
        - kube-apiserver
      icmps:
        - fields:
          - type: 8
            family: IPv4
          # I don't currently have IPv6 setup in the cluster but its on the todo list and this is
          # one less issue we'll hit when that happens.
          - type: 128
            family: IPv6
