manifests/cilium/policies/hubble-relay-policy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay-policy
  namespace: kube-system

  annotations:
    version: "20241111.01"
    last-updated: "2024-11-11T18:50:36-05:00"

  #labels:
  #  "io.cilium.policy.audit-mode": "enabled"
spec:
  description: "Explicit network policy for hubble-relay in default-deny environment"

  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
      io.kubernetes.pod.namespace: kube-system

  egress:
    # Allow the hubble-relay to access the agent pods to collect information on active flows
    - toEndpoints:
        - matchLabels:
            k8s-app: cilium
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
          - port: "4244"
            protocol: TCP

    # The relay talks to the API server to retrieve metadata about other hosts and containers
    - toEntities:
      - kube-apiserver

    # DNS access, may not be needed
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          #rules:
          #  dns:
          #    - matchPattern: "*"

  ingress:
    # Allow kubernetes healthchecks from kubelet
    - fromEndpoints:
        - matchLabels:
            # These labels match the kubelet endpoints that perform health checks against the
            # service
            k8s-app: kubelet
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
          - port: "4244"
            protocol: TCP
          #rules:
          #  http:
          #    - method: "GET"
          #      path: "/healthz"

    # Let port-forwarded CLI connections talk to the relay
    - fromEntities:
        - host
      toPorts:
        - ports:
          - port: "4245"
            protocol: TCP

    # Allow access from Grafana Agent in observability namespace
    #- fromEndpoints:
    #    - matchLabels:
    #        io.kubernetes.pod.namespace: observability
    #        k8s-app: grafana-agent
    #  toPorts:
    #    - ports:
    #      - port: "4245"
    #        protocol: TCP

    # Hubble UI access - commented out but preserved for reference
    #- fromEndpoints:
    #    - matchLabels:
    #        k8s-app: hubble-ui
    #        io.kubernetes.pod.namespace: kube-system
    #  toPorts:
    #    - ports:
    #      - port: "4245"
    #        protocol: TCP
